--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vie-react-layout",
+  "name": "vie-layout",
   "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
