--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "author": "vuvudev",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vuvudev/vie-layout.git"
+    "url": "https://github.com/vuvu-dev/vie-layout.git"
   },
   "bugs": {
-    "url": "https://github.com/vuvudev/vie-layout/issues"
+    "url": "https://github.com/vuvu-dev/vie-layout/issues"
   },
-  "homepage": "https://github.com/vuvudev/vie-layout#readme",
+  "homepage": "https://github.com/vuvu-dev/vie-layout#readme",
   "license": "MIT",
   "description": "",
   "dependencies": {
